--- a/src/Components/buttons/button/button.css
+++ b/src/Components/buttons/button/button.css
@@ -1,30 +1,45 @@
+.buttons{
+    width: 300px;
+    max-height: 90px;
+    animation: move 2s linear infinite;
+    animation-delay: 0.5s;
+    perspective: 300px;
+}
 .buttons__button{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.button_size-s{
-    height: 5em;
-    font-size: calc(4vh / var(--unit));
-    font-weight: 600;
-    color: rgb(110, 255, 74);
-    text-shadow: 0 0 3px rgb(110, 255, 74);
-}
-.button_size-s:hover{
-    color: rgb(253, 21, 156);
-    text-shadow: 0 0 30px rgb(253, 21, 156);
-}
+
 .button_size-l{
     height: 3em;
     font-size: calc(10vh / var(--unit));
     font-weight: 600;
     color: rgb(110, 255, 74);
     text-shadow: 0 0 3px rgb(110, 255, 74);
+    animation: move 2s linear infinite;
 }
 .button_size-l:hover{
     color: rgb(253, 21, 21);
     text-shadow: 0 0 30px rgb(253, 21, 21);
+}
+@keyframes move{
+    0%{
+        transform:skewX(0deg) skewY(0deg) rotateY(0deg);
+    }
+    25%{
+        transform:skewX(10deg) skewY(5deg) rotateY(15deg);
+    }
+    50%{
+        transform:skewX(0deg) skewY(0deg) rotateY(0deg);
+    }
+    75%{
+        transform:skewX(-10deg) skewY(-5deg) rotateY(-15deg);
+    }
+    100%{
+        transform:skewX(0deg) skewY(0deg) rotateY(0deg);
+    }
 }
 .button_active{
     color: rgb(253, 21, 156);
